# algokit-client-generator-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  client.ts  compressed_output.txt  pyproject.toml  pytest-junit.xml
.github/: dependabot.yml
.github/workflows/: build-python.yaml  cd.yaml  check-python.yaml  pr.yaml
docs/: usage.md  v2-migration.md
examples/: __main__.py  conftest.py
examples/arc56_test/: client.py  test_client.py
examples/duplicate_structs/: client.py
examples/global_state_struct/: application.json  client.py  contract.py  test_client.py
examples/helloworld/: application.json  client.py  client_generated.py  helloworld.py  test_client.py
examples/lifecycle/: application.json  client.py  lifecycle.py  test_client.py
examples/minimal/: application.json  client.py  minimal.py  test_client.py
examples/nested/: client.py  nested.py  test_client.py
examples/nfd/: client.py
examples/reti/: __init__.py  client.py
examples/smart_contracts/artifacts/arc56_test/: arc56_test_arc56_client.py  arc56_test_arc56_client_minimal.py  arc56_test_client.py
examples/smart_contracts/artifacts/duplicate_structs/: DuplicateStructs.arc32.json  duplicate_structs_arc32_client.py  duplicate_structs_arc32_client_minimal.py  duplicate_structs_client.py
examples/smart_contracts/artifacts/hello_world/: HelloWorld.arc32.json  hello_world_arc32_client.py  hello_world_arc32_client_minimal.py  hello_world_client.py
examples/smart_contracts/artifacts/life_cycle/: LifeCycle.arc32.json  life_cycle_arc32_client.py  life_cycle_arc32_client_minimal.py  life_cycle_client.py
examples/smart_contracts/artifacts/lifecycle/: LifeCycle.arc32.json  lifecycle_client.py
examples/smart_contracts/artifacts/minimal/: Minimal.arc32.json  minimal_arc32_client.py  minimal_arc32_client_minimal.py  minimal_client.py
examples/smart_contracts/artifacts/nested/: Nested.arc56.json  nested_arc56_client.py  nested_arc56_client_minimal.py  nested_client.py
examples/smart_contracts/artifacts/nfd/: nfd_arc56_client.py  nfd_arc56_client_minimal.py  nfd_client.py
examples/smart_contracts/artifacts/reti/: reti_arc56_client.py  reti_arc56_client_minimal.py  reti_client.py
examples/smart_contracts/artifacts/state/: State.arc32.json  State.arc56.json  state_arc32_client.py  state_arc32_client_minimal.py  state_arc56_client.py  state_arc56_client_minimal.py  state_client.py
examples/smart_contracts/artifacts/structs/: Structs.arc56.json  structs_arc56_client.py  structs_arc56_client_minimal.py  structs_client.py
examples/smart_contracts/artifacts/voting_round/: VotingRound.arc32.json  voting_round_arc32_client.py  voting_round_arc32_client_minimal.py  voting_round_client.py
examples/smart_contracts/base/: contract.py
examples/smart_contracts/duplicate_structs/: contract.py
examples/smart_contracts/hello_world/: contract.py
examples/smart_contracts/lifecycle/: contract.py
examples/smart_contracts/state/: contract.py
examples/smart_contracts/structs/: contract.py
examples/smart_contracts/voting/: contract.py
examples/smart_contracts/voting_round/: contract.py
examples/state/: algokit-client-generator-py.code-workspace  application.json  client.py  client_generated.py  state.py  test_client.py
examples/structs/: application.json  client.py  contract.py  test_client.py
examples/tests/: test_arc56_test_client.py  test_client_approval.py  test_hello_world_arc32_client.py  test_hello_world_client.py  test_life_cycle_arc32_client.py  test_life_cycle_client.py  test_lifecycle_client.py  test_minimal_arc32_client.py  test_minimal_client.py  test_nested_client.py  test_state_arc32_client.py  test_state_arc56_client.py  test_state_client.py  test_structs_arc56_client.py  test_structs_client.py  test_voting_arc32_client.py  test_voting_client.py
examples/testworld/: client.py
examples/voting/: application.json  client.py  client_generated.py  test_client.py  voting.py
examples/zero_coupon_bond/: client.py
scripts/: _helpers.py  update_approvals.py
src/algokit_client_generator/: __init__.py  __main__.py  cli.py  context.py  document.py  generator.py  spec.py  utils.py  writer.py
src/algokit_client_generator/generators/: app_spec.py  composer.py  header_comments.py  helpers.py  imports.py  typed_client.py  typed_factory.py
tests/: test_generator.py
(+3 files in other folders)
