[tool.poetry]
name = "algokit-client-generator"
version = "2.0.0"
description = "Algorand typed client Generator"
authors = ["Algorand Foundation <contact@algorand.foundation>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
algokit-utils = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.6,<0.10.0"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pip-audit = "^2.5.5"
python-semantic-release = ">=7.33.4,<10.0.0"
pre-commit = "^3.3.2"
poethepoet = ">=0.20,<0.33"
pytest-xdist = "^3.5.0"
puyapy = { version = "^4.1.1", python = "^3.12" }
algorand-python = { version = "^2.4.1", python = "^3.12" }
setuptools = "^75.8.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algokitgen-py = "algokit_client_generator.cli:main"

[tool.ruff]
line-length = 120
lint.select = [
  # all possible codes as of this ruff version are listed here,
  # ones we don't want/need are commented out to make it clear
  # which have been omitted on purpose vs which ones get added
  # in new ruff releases and should be considered for enabling
  "F",      # pyflakes
  "E", "W", # pycodestyle
  "C90",    # mccabe
  "I",      # isort
  "N",      # PEP8 naming
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
  "ANN",    # flake8-annotations
  # "S",    # flake8-bandit
  # "BLE",  # flake8-blind-except
  "FBT",    # flake8-boolean-trap
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  # "COM",  # flake8-commas
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "T10",    # flake8-debugger
  # "DJ",   # flake8-django
  # "EM",   # flake8-errmsg
  # "EXE",  # flake8-executable
  "ISC",    # flake8-implicit-str-concat
  "ICN",    # flake8-import-conventions
  # "G",    # flake8-logging-format
  # "INP",  # flake8-no-pep420
  "PIE",    # flake8-pie
  # "T20",    # flake8-print
  "PYI",    # flake8-pyi
  "PT",     # flake8-pytest-style
  "Q",      # flake8-quotes
  "RSE",    # flake8-raise
  "RET",    # flake8-return
  "SLF",    # flake8-self
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "PTH",    # flake8-use-pathlib
  "ERA",    # eradicate
  # "PD",   # pandas-vet
  "PGH",    # pygrep-hooks
  "PL",     # pylint
  # "TRY",  # tryceratops
  # "NPY",  # NumPy-specific rules
  "RUF",    # Ruff-specific rules
]
lint.ignore = [
  "RET505", # allow else after return
  "SIM108", # allow if-else in place of ternary
  "PLR2004", # magic values... can't configure to ignore simple low value ints like 2
  # To avoid conflict with ruff formatter. More details on https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111", # indentation is not a multiple of four
  "E117", # over-indented
  "ISC001", # single line implicit string concatenation
  "ISC002", # multi line implicit string concatenation
  "Q000", # bad quotes inline string
  "Q001", # bad quotes multiline string
  "Q002", # bad quotes docstring
  "Q003", # avoidable escaped quotes
  "W191", # indentation contains tabs
]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "docs",
  # Exclude examples as it deals with pregenerated code.
  "examples"
]
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"src/algokit_client_generator/generator.py" = ["ARG001"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.poe.tasks]
update-approvals = "poetry run python -m scripts.update_approvals"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.mypy]
files = ["src", "tests"]
exclude = ["dist"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true
disable_error_code = ['return']

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
remove_dist = false
build_command = "poetry build --format wheel"
version_source = "tag"
major_on_zero = true
upload_to_repository = false
tag_commit = true
branch = "main"
commit_message = "{version}\n\nskip-checks: true"

